    replacing the now deprecated `xdrlib` core Python library
    (PR #4271)
  * ConverterBase class moved from coordinates/base.py to converters/base.py (Issue #3404)
  * Results for WatsonCrickDist nucleic acids analysis are now stored in 
    `analysis.nucleicacids.WatsonCrickDist.results.distances` (Issue #3720, PR #3735)

Deprecations
  * MDAnalysis.lib.util is deprecated and will be removed in version 3.0
    (Issue #3649)
  * The TRZ reader & writer are deprecated and will be removed in version 3.0
    (PR #4335)
  * X3DNA has been deprecated and will be removed in 3.0.0 (Issue #3788)
  * coordinates.base.ConverterBase has been deprecated and will be removed in 3.0.0;
    use converters.base.ConvertBase instead (Issue #3404)
  * In `nucleicacids.WatsonCrickDist`, accepting lists of `Residue` objects was deprecated
    in favor of using `ResidueGroup`: using `List[Residue]` will be removed in release
    3.0.0; instead use a `ResidueGroup` (Issue #3720, PR #3735)
  * In `nucleicacids.WatsonCrickDist` the result `results.pair_distances` was
    deprecated and will be removed in 3.0.0; use `results.distances` (Issue #3720, 
    PR #3735)


28/08/23 IAlibay, hmacdope, pillose, jaclark5, tylerjereddy

 * 2.6.1

Fixes
  * Fix Atom type guessing error (PR #4168, Issue #4167)

Enhancements
  * Allow `set_dimensions` transformation to handle NPT trajectories (PR #4258)

Changes
  * Reverts PR #4108, builds are now again made using the oldest
    supported NumPy version.
  * NumPy `in1d` replaced with `isin` in preparation for NumPy
    `2.0` (PR #4255)
  * Update documentation for SurvivalProbabilty to be more clear
    (Issue #4247)
  * Cython DEF statments have been replaced with compile time integer constants
    as DEF is deprecated as of Cython>=3.0 (Issue #4237, PR #4246)

Deprecations


08/15/23 IAlibay, jaclark5, MohitKumar020291, orionarcher, xhgchen,
         ztimol, orbeckst

 * 2.6.0

Fixes
  * Fix AtomGroup.center_of_charge(..., unwrap=True) giving